--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -24,6 +24,24 @@ jobs:
       - du -sh public/
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
+  - !CommandStep
+    name: deploy
+    runInContainer: true
+    image: alpine:3.17
+    interpreter: !DefaultInterpreter
+      commands:
+      - echo "==> (1/4) Set Repositories Mirror"
+      - sed -i 's/dl-cdn.alpinelinux.org/mirrors.bfsu.edu.cn/g' /etc/apk/repositories
+      - echo "==> (2/4) Install openssh"
+      - apk update && apk add openssh
+      - echo "==> (3/4) Import Key"
+      - echo ${SSH_KEY} > /tmp/id_ed25519
+      - echo "==> (4/4) Deploy"
+      - ssh -p 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" "services@@10.1.0.50"
+        "rm -r ~/sites.d/homepage"
+      - scp -P 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" "public" "services@@10.1.0.50:sites.d/homepage"
+    useTTY: false
+    condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
   - !BranchUpdateTrigger
     branches: main
