--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -36,6 +36,7 @@ jobs:
       - apk update && apk add openssh
       - echo "==> (3/4) Import Key"
       - echo ${SSH_KEY} > /tmp/id_ed25519
+      - chmod 0600 /tmp/id_ed25519
       - echo "==> (4/4) Deploy"
       - ssh -p 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" "services@@10.1.0.50"
         "rm -r ~/sites.d/homepage"
