--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -40,7 +40,7 @@ jobs:
       - echo "==> (4/4) Deploy"
       - ssh -p 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" "services@@10.1.0.50"
         "rm -r ~/sites.d/homepage"
-      - scp -P 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" "public" "services@@10.1.0.50:sites.d/homepage"
+      - scp -P 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" -r "public" "services@@10.1.0.50:sites.d/homepage"
     useTTY: false
     condition: ALL_PREVIOUS_STEPS_WERE_SUCCESSFUL
   triggers:
