--- a/.onedev-buildspec.yml
+++ b/.onedev-buildspec.yml
@@ -36,7 +36,7 @@ jobs:
       - echo "==> (2/4) Install openssh"
       - apk update && apk add openssh
       - echo "==> (3/4) Import Key"
-      - echo "@secret:SSH_KEY@" | tee /tmp/id_ed25519
+      - echo "@secret:SSH_KEY@" | tee /tmp/id_ed25519 > /dev/null
       - chmod 0600 /tmp/id_ed25519
       - echo "==> (4/4) Deploy"
       - ssh -p 2022 -i /tmp/id_ed25519 -o "StrictHostKeyChecking=no" "services@@10.1.0.50"
